# CampusFlow

./: .gitignore
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/migrations/: 20240101000000_initial_schema.sql  20240101000001_seed_data.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/auth/: jwt.rs  otp.rs
backend/src/email/: smtp.rs
backend/src/middleware/: auth.rs
backend/src/models/: booking.rs  equipment.rs  equipment_issue.rs  maintenance_log.rs  mod.rs  physical_resource.rs  user.rs
backend/src/routes/: auth.rs  bookings.rs  equipment.rs  equipment_categories.rs  equipment_issues.rs  maintenance_logs.rs  mod.rs  physical_resources.rs  roles.rs  users.rs
backend/tests/: seed_test.rs
frontend/: CLAUDE.md  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/forgot-password/: page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/components/: LoadingOverlay.tsx  LoadingProvider.tsx  Navbar.tsx  ThemeToggle.tsx
frontend/app/contact/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/bookings/: page.tsx
frontend/app/hooks/: authContext.tsx  index.ts  themeContext.ts  useTheme.tsx  userTheme.ts
frontend/app/lib/: api.ts  auth.ts
frontend/app/loading/: page.tsx
frontend/app/resources/: page.tsx
frontend/lib/: seedData.ts
